doplneni abstrakt a hlavicka

--- a/clanok.tex
+++ b/clanok.tex
@@ -15,7 +15,7 @@
 
 \pagestyle{headings}
 
-\title{Názov\thanks{Semestrálny projekt v predmete Metódy inžinierskej práce, ak. rok 2022/23, vedenie: Meno Priezvisko}} % meno a priezvisko vyučujúceho na cvičeniach
+\title{Vplyv akčných hier na rýchlosť reakcií a myslenia človeka\thanks{Semestrálny projekt v predmete Metódy inžinierskej práce, ak. rok 2022/23, vedenie: Vladimír Mlynarovič}} % meno a priezvisko vyučujúceho na cvičeniach
 
 \author{Roman Košík\\[2pt]
 	{\small Slovenská technická univerzita v Bratislave}\\
@@ -23,7 +23,7 @@
 	{\small \texttt{...@stuba.sk}}
 	}
 
-\date{\small 30. september 2015} % upravte
+\date{\small 25. Október 2022} % upravte
 
 
 
@@ -32,7 +32,11 @@
 \maketitle
 
 \begin{abstract}
-\ldots
+Hranie akčných videohier vyžaduje, aby si hráči vytvorili kognitívny profil, ktorý im umožňuje rýchlo reagovať na pohybujúce vizuálne a sluchové podnety a potláčať chybné akcie.
+
+Táto štúdia skúma, či existuje súvis medzi hraním akčných hier, v ktorých je potrebné rýchlo a správne reagovať,  a efektívnejším vykonávaním bežných úloh. Konkrétne, či jednotlivci ktorí tieto hry hrali majú zvýšenú rýchlosť prepínania medzi viacerými úlohami a kognitívneho spracovania. Výskum sa vykonával na ľuďoch bez skúsenosti s videohrami a vzorke hráčov FPS a MOBA hier. Výsledky jedného z testov ukázali, že skúsení hráči boli výrazne rýchlejší v odpovediach ako ľudia bez skúsenosti s hrami, pričom ale robili viac chýb.
+
+Zistili sme, že hráči videohier využívajú stratégiu, ktorá uprednostňuje rýchlosť oproti presnosti.
 \end{abstract}
 
 
@@ -62,8 +66,6 @@ Aj text môže byť prezentovaný ako obrázok. Stane sa z neho označný pláva
 
 \section{Dalšia časť}\label{dalsia}
 jnfkbfhaerbfjbaeejbfasjfjkasdfjk errfnekajf
-
-\input{vstup.txt}
 
 \section{Iná časť} \label{ina}
 
